force-app/main/default/objects/AdabasSite__c/AdabasSite__c.object-meta.xml
<CustomObject>
    <label>Adabas Site</label>
    <nameField>
        <label>Adabas Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adabas Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>