force-app/main/default/objects/AdabasSite__c/fields/AdabasCode__c.field-meta.xml
<CustomField>
    <fullName>AdabasCode__c</fullName>
    <label>Código Adabas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>