force-app/main/default/objects/AdabasSite__c/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <label>CNPJ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>