force-app/main/default/objects/AdabasSite__c/fields/IdSAP__c.field-meta.xml
<CustomField>
    <fullName>IdSAP__c</fullName>
    <externalId>true</externalId>
    <label>Id SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>